bidirectional updated