@@ -20,7 +20,7 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class BookServiceImpl implements BookService{
+public class BookServiceImpl implements BookService {
 
     final BookRepository bookRepository;
     final AuthorRepository authorRepository;
@@ -30,7 +30,7 @@ public class BookServiceImpl implements BookService{
     @Transactional
     @Override
     public boolean addBook(BookDto bookDto) {
-        if (bookRepository.existsById(bookDto.getIsbn())){
+        if (bookRepository.existsById(bookDto.getIsbn())) {
             return false;
         }
         // Publisher handle
@@ -71,20 +71,15 @@ public class BookServiceImpl implements BookService{
     public Iterable<BookDto> findBooksByAuthor(String authorName) {
         Author author = authorRepository.findById(authorName).orElseThrow(EntityNotFoundException::new);
         return author.getBooks().stream()
-                .map(book -> modelMapper.map(book, BookDto.class))
+                .map(b -> modelMapper.map(b, BookDto.class))
                 .toList();
     }
 
-//    @Transactional(readOnly = true)
     @Override
     public Iterable<BookDto> findBooksByPublisher(String publisherName) {
-//        return bookRepository.findByPublisherPublisherName(publisherName)
-//                .map(book -> modelMapper.map(book, BookDto.class))
-//                .toList();
-
-        Publisher publisher = publisherRepository.findById(publisherName).orElse(null);
+        Publisher publisher = publisherRepository.findById(publisherName).orElseThrow(EntityNotFoundException::new);
         return publisher.getBooks().stream()
-                .map(book -> modelMapper.map(book, BookDto.class))
+                .map(b -> modelMapper.map(b, BookDto.class))
                 .toList();
     }
 
@@ -92,25 +87,26 @@ public class BookServiceImpl implements BookService{
     public Iterable<AuthorDto> findBookAuthors(String isbn) {
         Book book = bookRepository.findById(isbn).orElseThrow(EntityNotFoundException::new);
         return book.getAuthors().stream()
-                .map(author -> modelMapper.map(author, AuthorDto.class))
-                .toList();
+                .map(a -> modelMapper.map(a, AuthorDto.class))
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
     @Override
     public Iterable<String> findPublishersByAuthor(String authorName) {
-//        return publisherRepository.findByPublishersAuthor(authorName);
         return publisherRepository.findDistinctByBooksAuthorsName(authorName)
                 .map(Publisher::getPublisherName)
                 .toList();
     }
 
+    @Transactional
     @Override
     public AuthorDto removeAuthor(String authorName) {
         Author author = authorRepository.findById(authorName).orElseThrow(EntityNotFoundException::new);
         authorRepository.deleteById(authorName);
         return modelMapper.map(author, AuthorDto.class);
     }
+
 
 //    @Transactional
 //    @Override
